RESOLVED FIXED219664
[GLIB] REGRESSION(r270526): Several URL related tests are failing
https://bugs.webkit.org/show_bug.cgi?id=219664
Summary [GLIB] REGRESSION(r270526): Several URL related tests are failing
Diego Pino
Reported 2020-12-08 20:16:38 PST
The following tests are failing since r270526: imported/w3c/web-platform-tests/fetch/data-urls/processing.any.html [ Failure ] imported/w3c/web-platform-tests/fetch/data-urls/processing.any.worker.html [ Failure ] imported/w3c/web-platform-tests/url/data-uri-fragment.html [ Failure ] r270526 adds a new test that is also failing. Diff: https://build.webkit.org/results/GTK-Linux-64-bit-Release-Tests/r270551%20(17359)/fast/url/data-url-mediatype-diff.txt --- /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/fast/url/data-url-mediatype-expected.txt +++ /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/fast/url/data-url-mediatype-actual.txt @@ -2,7 +2,7 @@ ALERT: video/mpegURL text#fragment ALERT: application/x-mpegurl text#fragment ALERT: vnd.apple.mpegurl text#fragment -ALERT: text/plain text +ALERT: text/plain text#fragment CONSOLE MESSAGE: Fetch API cannot load data:te#xt/plain,text#fragment. ALERT: caught error with mime type te#xt/plain Diff: https://build.webkit.org/results/GTK-Linux-64-bit-Release-Tests/r270551%20(17359)/imported/w3c/web-platform-tests/url/data-uri-fragment-diff.txt --- /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/url/data-uri-fragment-expected.txt +++ /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/url/data-uri-fragment-actual.txt @@ -1,4 +1,4 @@ -PASS Data URI parsing of fragments +FAIL Data URI parsing of fragments assert_equals: expected "<p id=\"foo\">This should be the only visible text.</p>" but got "<p id=\"foo\">This should be the only visible text.</p>#foo" Diff: https://build.webkit.org/results/GTK-Linux-64-bit-Release-Tests/r270551%20(17359)/imported/w3c/web-platform-tests/fetch/data-urls/processing.any-diff.txt --- /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/fetch/data-urls/processing.any-expected.txt +++ /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/fetch/data-urls/processing.any-actual.txt @@ -7,7 +7,7 @@ PASS "data:text/html" PASS "data:text/html ;charset=x " PASS "data:," -PASS "data:,X#X" +FAIL "data:,X#X" assert_array_equals: lengths differ, expected array [88] length 1, got object "88,35,88" length 3 PASS "data:,%FF" PASS "data:text/plain,X" PASS "data:text/plain ,X" Diff: https://build.webkit.org/results/GTK-Linux-64-bit-Release-Tests/r270551%20(17359)/imported/w3c/web-platform-tests/fetch/data-urls/processing.any.worker-diff.txt --- /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/fetch/data-urls/processing.any.worker-expected.txt +++ /home/buildbot/worker/gtk-linux-64-release-tests/build/layout-test-results/imported/w3c/web-platform-tests/fetch/data-urls/processing.any.worker-actual.txt @@ -7,7 +7,7 @@ PASS "data:text/html" PASS "data:text/html ;charset=x " PASS "data:," -PASS "data:,X#X" +FAIL "data:,X#X" assert_array_equals: lengths differ, expected array [88] length 1, got object "88,35,88" length 3 PASS "data:,%FF" PASS "data:text/plain,X" PASS "data:text/plain ,X"
Attachments
Patch (2.94 KB, patch)
2020-12-08 20:38 PST, Diego Pino
no flags
Patch (2.93 KB, patch)
2020-12-08 22:05 PST, Diego Pino
no flags
Diego Pino
Comment 1 2020-12-08 20:38:31 PST
Alex Christensen
Comment 2 2020-12-08 20:40:04 PST
Comment on attachment 415707 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=415707&action=review Yep, I accidentally reversed the non-Cocoa behavior. Sorry about that. > LayoutTests/platform/glib/TestExpectations:1435 > +fast/url/data-url-mediatype.html [ Skip ] You could alternatively check in platform-specific test expectations.
Diego Pino
Comment 3 2020-12-08 22:05:54 PST
EWS
Comment 4 2020-12-08 23:07:38 PST
Committed r270570: <https://trac.webkit.org/changeset/270570> All reviewed patches have been landed. Closing bug and clearing flags on attachment 415714 [details].
Radar WebKit Bug Importer
Comment 5 2020-12-08 23:08:15 PST
Note You need to log in before you can comment on or make changes to this bug.