[GLIB] REGRESSION(r270526): Several URL related tests are failing https://bugs.webkit.org/show_bug.cgi?id=219664

Reviewed by Alex Christensen.

Source/WebCore:

r270526 changed the behaviour of shouldRemoveFragmentIdentifier for
non-Apple ports. It should return true.

* platform/network/DataURLDecoder.cpp:
(WebCore::DataURLDecoder::shouldRemoveFragmentIdentifier):

LayoutTests:

* platform/glib/TestExpectations: Skip fast/url/data-url-mediatype.html as it depends on non-supported feature.


Canonical link: https://commits.webkit.org/232241@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@270570 268f45cc-cd09-0410-ab3c-d52691b4dbfc